8067662: "java.lang.NullPointerException: Method name is null" from StackTraceElement.<init>

Use method cpref and klass version to provide meaningful methods name in stacktraces

Reviewed-by: coleenp, dcubed